environments/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-analyzer
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:889039329094:certificate/3def5ba0-c8f6-4b97-9cc7-755daa548b8d
    external-dns.alpha.kubernetes.io/hostname: dev.oppsdev.xyz
    alb.ingress.kubernetes.io/security-groups: sg-092d94d10bd0049a2
    alb.ingress.kubernetes.io/tags: Environment=dev,Application=invoice-analyzer
spec:
  rules:
  - host: dev.oppsdev.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
